initial-commit: fixtures

--- a/src/static/admin.html
+++ b/src/static/admin.html
@@ -33,13 +33,13 @@
       <input name="name" />
       <select name="region" x-opt>
         <option value="">Region</option>
-        <option>Europe &amp; Central Asia</option>
-        <option>Middle East &amp; North Africa</option>
-        <option>South Asia</option>
-        <option>Latin America &amp; Caribbean</option>
-        <option>Sub-Saharan Africa</option>
         <option>East Asia &amp; Pacific</option>
+        <option>Europe &amp; Central Asia</option>
+        <option>Latin America &amp; Caribbean</option>
+        <option>Middle East, North Africa, Afghanistan &amp; Pakistan</option>
         <option>North America</option>
+        <option>South Asia</option>
+        <option>Sub-Saharan Africa</option>
       </select>
     </x-table>
     <x-table x-table="permissions">
