fix: change region names according to recent db changes, refactor: front-end code cleanup
Co-authored-by: Kemal Berke Yılmaz <yilmazk21@itu.edu.tr>

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -43,7 +43,7 @@
             <button class="nav-link active" id="providers-tab" data-bs-toggle="tab" data-bs-target="#providers" type="button" role="tab" aria-controls="providers" aria-selected="true">Providers</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="countries-tab" data-bs-toggle="tab" data-bs-target="#countries" type="button" role="tab" aria-controls="countries" aria-selected="false">Countries</button>
+            <button class="nav-link" id="countries-tab" data-bs-toggle="tab" data-bs-target="#countries" type="button" role="tab" aria-controls="countries" aria-selected="false">Economies</button>
           </li>
           <li class="nav-item" role="presentation">
             <button class="nav-link" id="permissions-tab" data-bs-toggle="tab" data-bs-target="#permissions" type="button" role="tab" aria-controls="permissions" aria-selected="false">Permissions</button>
