--- a/src/static/admin.html
+++ b/src/static/admin.html
@@ -22,26 +22,26 @@
   <main>
     <x-table x-table="users">
       <input name="id" type="number" x-key x-nocreate />
-      <input name="name" placeholder="Full Name" />
-      <input name="email" placeholder="Email" />
-      <input name="password" type="password" placeholder="Password" />
+      <input name="name" />
+      <input name="email" />
+      <input name="password" type="password" />
     </x-table>
 
     <x-table x-table="providers">
       <input name="id" type="number" x-key x-nocreate />
 
-      <input name="administrative_account" type="number" placeholder="Admin User ID" />
-      <input name="technical_account" x-opt type="number" placeholder="Tech User ID" />
+      <input name="administrative_account" type="number" />
+      <input name="technical_account" x-opt type="number" />
 
-      <input name="name" placeholder="Provider Name" />
-      <input name="description" placeholder="Description" x-opt />
+      <input name="name" />
+      <input name="description" x-opt />
 
       <input name="nologin" type="checkbox" />
     </x-table>
 
     <x-table x-table="economies">
-      <input name="code" x-key placeholder="Code (e.g. TUR)" maxlength="3" />
-      <input name="name" placeholder="Name" />
+      <input name="code" x-key maxlength="3" />
+      <input name="name" />
 
       <select name="region" x-opt>
         <option value="">Region</option>
@@ -64,17 +64,17 @@
       </select>
 
       <input name="is_aggregate" type="checkbox" />
-      <input name="capital_city" placeholder="Capital City" x-opt />
-      <input name="lat" type="number" step="any" placeholder="Latitude" x-opt />
-      <input name="lng" type="number" step="any" placeholder="Longitude" x-opt />
+      <input name="capital_city" x-opt />
+      <input name="lat" type="number" step="any" x-opt />
+      <input name="lng" type="number" step="any" x-opt />
     </x-table>
 
     <x-table x-table="permissions">
       <input name="id" type="number" x-key x-nocreate />
 
-      <input name="provider_id" type="number" placeholder="Provider ID" />
+      <input name="provider_id" type="number" />
 
-      <input name="economy_code" placeholder="Eco Code" maxlength="3" x-opt />
+      <input name="economy_code" maxlength="3" x-opt />
       <select name="region" x-opt>
         <option value="">Region</option>
         <option value="EAS">East Asia & Pacific</option>
@@ -86,9 +86,9 @@
         <option value="SSF">Sub-Saharan Africa</option>
       </select>
 
-      <input name="year_start" type="number" placeholder="Start Year" />
-      <input name="year_end" type="number" placeholder="End Year" />
-      <input name="footnote" placeholder="Footnote" x-opt />
+      <input name="year_start" type="number" />
+      <input name="year_end" type="number" />
+      <input name="footnote" x-opt />
     </x-table>
 
     <x-table x-table="indicators">
@@ -96,24 +96,24 @@
       <input name="economy_code" x-key />
       <input name="year" type="number" x-key />
 
-      <input name="community_health_workers" type="number" />
-      <input name="prevalence_of_undernourishment" type="number" />
-      <input name="prevalence_of_severe_food_insecurity" type="number" />
-      <input name="basic_handwashing_facilities" type="number" />
-      <input name="safely_managed_drinking_water_services" type="number" />
-      <input name="diabetes_prevalence" type="number" />
+      <input name="community_health_workers" type="number" x-opt />
+      <input name="prevalence_of_undernourishment" type="number" x-opt />
+      <input name="prevalence_of_severe_food_insecurity" type="number" x-opt />
+      <input name="basic_handwashing_facilities" type="number" x-opt />
+      <input name="safely_managed_drinking_water_services" type="number" x-opt />
+      <input name="diabetes_prevalence" type="number" x-opt />
 
-      <input name="industry" type="number" />
-      <input name="gdp_per_capita" type="number" />
-      <input name="trade" type="number" />
-      <input name="agriculture_forestry_and_fishing" type="number" />
+      <input name="industry" type="number" x-opt />
+      <input name="gdp_per_capita" type="number" x-opt />
+      <input name="trade" type="number" x-opt />
+      <input name="agriculture_forestry_and_fishing" type="number" x-opt />
 
-      <input name="energy_use" type="number" />
-      <input name="access_to_electricity" type="number" />
-      <input name="alternative_and_nuclear_energy" type="number" />
-      <input name="permanent_cropland" type="number" />
-      <input name="crop_production_index" type="number" />
-      <input name="gdp_per_unit_of_energy_use" type="number" />
+      <input name="energy_use" type="number" x-opt />
+      <input name="access_to_electricity" type="number" x-opt />
+      <input name="alternative_and_nuclear_energy" type="number" x-opt />
+      <input name="permanent_cropland" type="number" x-opt />
+      <input name="crop_production_index" type="number" x-opt />
+      <input name="gdp_per_unit_of_energy_use" type="number" x-opt />
     </x-table>
   </main>
 </body>
