db: rename nologin to immutable, doc: management routes

--- a/src/static/super-admin.html
+++ b/src/static/super-admin.html
@@ -38,7 +38,7 @@
       <input name="name" />
       <input name="description" x-opt />
 
-      <input name="nologin" type="checkbox" />
+      <input name="immutable" type="checkbox" />
     </x-table>
 
     <x-table x-table="economies">
