minor: form text color change

--- a/src/static/management-console.html
+++ b/src/static/management-console.html
@@ -25,6 +25,9 @@
 	.text {
 	  color: rgba(255,255,255,0.8) !important;
 	}
+	.form-check{
+		color:rgba(255,255,255,0.8);
+	}
     
     .navbar {
       background: rgba(15, 52, 96, 0.9) !important;
